# minesweeper

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: display.h  game.h  minefield.h  minesweeper_game.h  minesweeper_game.hpp  terminal_frontend.h  terminal_frontend.hpp  tile.h  tile.hpp  util.h  util.hpp
src/: display.c  game.c  main.c  main.cpp  minefield.c  minesweeper_game.c  minesweeper_game.cpp  terminal_frontend.c  terminal_frontend.cpp  tile.c  util.c  util.cpp
